--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "astro/tsconfigs/strict"
+	"compilerOptions": {
+		"jsx": "react",
+		// ...
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
+		// ...
+	}
 }
